@@ -1,34 +1,14 @@
 package pl.ecommerce.vendor.integration;
 
-import org.apache.kafka.clients.admin.AdminClient;
-import org.apache.kafka.clients.admin.AdminClientConfig;
-import org.apache.kafka.clients.admin.NewTopic;
-import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
-import org.apache.kafka.clients.consumer.KafkaConsumer;
-import org.apache.kafka.common.errors.TopicExistsException;
-import org.apache.kafka.common.serialization.StringDeserializer;
 import org.junit.jupiter.api.*;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.kafka.test.context.EmbeddedKafka;
 import org.springframework.kafka.test.utils.KafkaTestUtils;
-import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.DynamicPropertyRegistry;
-import org.springframework.test.context.DynamicPropertySource;
-import org.testcontainers.containers.MongoDBContainer;
-import org.testcontainers.containers.wait.strategy.Wait;
-import org.testcontainers.junit.jupiter.Container;
-import org.testcontainers.junit.jupiter.Testcontainers;
-import org.testcontainers.kafka.KafkaContainer;
-import org.testcontainers.utility.DockerImageName;
 import pl.ecommerce.commons.kafka.EventPublisher;
 import pl.ecommerce.vendor.api.dto.CategoryAssignmentRequest;
-import pl.ecommerce.vendor.domain.model.Address;
 import pl.ecommerce.vendor.domain.model.Category;
 import pl.ecommerce.vendor.domain.model.CategoryAssignment;
 import pl.ecommerce.vendor.domain.model.Vendor;
@@ -39,62 +19,24 @@ import pl.ecommerce.vendor.domain.service.VendorService;
 import pl.ecommerce.vendor.infrastructure.client.ProductServiceClient;
 import pl.ecommerce.vendor.infrastructure.exception.CategoryAssignmentException;
 import pl.ecommerce.vendor.infrastructure.exception.VendorNotFoundException;
+import pl.ecommerce.vendor.integration.helper.KafkaTopics;
+import pl.ecommerce.vendor.integration.helper.TestUtils;
 import reactor.core.publisher.Flux;
 import reactor.test.StepVerifier;
 
-import javax.money.Monetary;
 import javax.money.MonetaryAmount;
 import java.math.BigDecimal;
-import java.time.Duration;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.lenient;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.when;
 
-@SpringBootTest
-@Testcontainers
-@ExtendWith(MockitoExtension.class)
 @EmbeddedKafka(partitions = 1, topics = {
 		"vendor.categories.assigned.event"
 })
-@ActiveProfiles("test")
-public class CategoryServiceIntegrationTest {
-
-	@Container
-	private static final MongoDBContainer MONGO_DB = new MongoDBContainer(
-			DockerImageName.parse("mongo:6-focal"))
-			.withExposedPorts(27017)
-			.withStartupTimeout(Duration.ofSeconds(60))
-			.waitingFor(Wait.forListeningPort());
-
-	@Container
-	private static final KafkaContainer KAFKA_CONTAINER = new KafkaContainer(
-			DockerImageName.parse("apache/kafka-native:3.8.0"))
-			.withStartupTimeout(Duration.ofMinutes(2))
-			.withEnv("KAFKA_AUTO_CREATE_TOPICS_ENABLE", "true")
-			.withEnv("KAFKA_NUM_PARTITIONS", "1")
-			.withEnv("KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR", "1")
-			.withEnv("KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR", "1")
-			.withEnv("KAFKA_TRANSACTION_STATE_LOG_MIN_ISR", "1")
-			.withEnv("KAFKA_LOG_FLUSH_INTERVAL_MESSAGES", "1")
-			.withEnv("KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS", "0");
-
-	@DynamicPropertySource
-	static void configureProperties(DynamicPropertyRegistry registry) {
-		registry.add("spring.data.mongodb.uri", () -> String.format(
-				"mongodb://%s:%d/vendor-service-test",
-				MONGO_DB.getHost(), MONGO_DB.getFirstMappedPort()));
-		registry.add("spring.data.mongodb.dot-replacement", () -> "_");
-		registry.add("spring.data.mongodb.field-naming-strategy",
-				() -> "org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy");
-		registry.add("spring.data.mongodb.auto-index-creation", () -> "true");
-
-		registry.add("spring.kafka.bootstrap-servers", KAFKA_CONTAINER::getBootstrapServers);
-	}
+class CategoryServiceIntegrationTest extends BaseIntegrationTest {
 
 	@Autowired
 	private VendorRepository vendorRepository;
@@ -116,49 +58,27 @@ public class CategoryServiceIntegrationTest {
 	private static final UUID CATEGORY_ID_2 = UUID.randomUUID();
 	private static final String VENDOR_EMAIL = "test.vendor@example.com";
 	private Vendor testVendor;
-	private static KafkaConsumer<String, String> consumer;
 	private List<ProductServiceClient.CategoryResponse> categoryResponses;
 	private MonetaryAmount commissionRate;
 
+	@BeforeAll
+	static void setupClass() {
+		setupKafkaConsumer(KafkaTopics.CATEGORY_TOPICS);
+		waitForKafkaReady(KafkaTopics.CATEGORY_TOPICS);
+	}
+
 	@BeforeEach
 	void setupBeforeEach() {
-		vendorRepository.deleteAll().block();
-		categoryAssignmentRepository.deleteAll().block();
+		TestUtils.cleanRepositories(vendorRepository, null, null, categoryAssignmentRepository);
 
-		Address businessAddress = Address.builder()
-				.street("123 Main St")
-				.buildingNumber("1")
-				.city("Test City")
-				.state("Test State")
-				.postalCode("12345")
-				.country("Test Country")
-				.build();
-
-		testVendor = Vendor.builder()
-				.id(VENDOR_ID)
-				.email(VENDOR_EMAIL)
-				.name("Test Vendor")
-				.description("Test Description")
-				.phone("123456789")
-				.businessName("Test Business")
-				.taxId("TAX-123456")
-				.businessAddress(businessAddress)
-				.bankAccountDetails("Test Bank Account")
-				.vendorStatus(Vendor.VendorStatus.ACTIVE)
-				.verificationStatus(Vendor.VerificationStatus.PENDING)
-				.active(true)
-				.build();
-
+		testVendor = TestUtils.createTestVendor(VENDOR_ID, VENDOR_EMAIL);
 		vendorRepository.save(testVendor).block();
 
 		vendorService = new VendorService(vendorRepository, eventPublisher);
 		categoryService = new CategoryService(categoryAssignmentRepository, vendorService,
 				productServiceClient, eventPublisher);
 
-		commissionRate = Monetary.getDefaultAmountFactory()
-				.setCurrency(Monetary.getCurrency("USD"))
-				.setNumber(10.0).create();
-
+		commissionRate = TestUtils.createMonetaryAmount(10.0, "USD");
 		categoryResponses = List.of(
 				new ProductServiceClient.CategoryResponse(
 						CATEGORY_ID_1,
@@ -169,56 +89,31 @@ public class CategoryServiceIntegrationTest {
 						"Home & Garden",
 						"Home improvement and garden supplies")
 		);
-
-
-		consumer.poll(Duration.ofMillis(100));
-	}
-
-	@BeforeAll
-	static void setupBeforeAll() {
-		MONGO_DB.start();
-		KAFKA_CONTAINER.start();
-
-		setupKafkaConsumer();
-		waitForKafkaReady();
-	}
-
-	@AfterAll
-	static void afterAll() {
-		MONGO_DB.stop();
-		MONGO_DB.close();
-		KAFKA_CONTAINER.stop();
-		KAFKA_CONTAINER.close();
 	}
 
 	@Test
 	void assignCategories_WithValidData_ShouldAssignSuccessfully() {
 		Mockito.reset(productServiceClient);
-
 		when(productServiceClient.getCategories(Mockito.argThat(list ->
 				list.size() == 1 && list.contains(CATEGORY_ID_1))))
-				.thenReturn(Flux.just(categoryResponses.get(0)));
+				.thenReturn(Flux.just(categoryResponses.getFirst()));
 
-		// Prepare assignment requests
 		List<CategoryAssignmentRequest> requests = List.of(
 				new CategoryAssignmentRequest(CATEGORY_ID_1.toString(), commissionRate)
 		);
 
-		// Test category assignment
 		StepVerifier.create(categoryService.assignCategories(VENDOR_ID, requests).collectList())
 				.assertNext(assignments -> {
 					assertThat(assignments).hasSize(1);
-					assertThat(assignments.get(0).getVendorId()).isEqualTo(VENDOR_ID);
-					assertThat(assignments.get(0).getCategory().getId()).isEqualTo(CATEGORY_ID_1);
-					assertThat(assignments.get(0).getStatus()).isEqualTo(CategoryAssignment.CategoryAssignmentStatus.ACTIVE);
-					assertThat(assignments.get(0).getCategoryCommissionRate()).isEqualTo(commissionRate);
+					assertThat(assignments.getFirst().getVendorId()).isEqualTo(VENDOR_ID);
+					assertThat(assignments.getFirst().getCategory().getId()).isEqualTo(CATEGORY_ID_1);
+					assertThat(assignments.getFirst().getStatus()).isEqualTo(CategoryAssignment.CategoryAssignmentStatus.ACTIVE);
+					assertThat(assignments.getFirst().getCategoryCommissionRate()).isEqualTo(commissionRate);
 				})
 				.verifyComplete();
 
-		// Verify Kafka event was published
-		ConsumerRecords<String, String> records = KafkaTestUtils.getRecords(consumer);
-		boolean eventReceived = records.records("vendor.categories.assigned.event").iterator().hasNext();
-
+		ConsumerRecords<String, String> records = KafkaTestUtils.getRecords(kafkaConsumer);
+		boolean eventReceived = records.records(KafkaTopics.CATEGORIES_ASSIGNED).iterator().hasNext();
 		assertTrue(eventReceived, "Expected VendorCategoriesAssignedEvent to be published.");
 	}
 
@@ -242,7 +137,6 @@ public class CategoryServiceIntegrationTest {
 	@Test
 	void assignCategories_ForNonExistingVendor_ShouldFail() {
 		UUID nonExistingId = UUID.randomUUID();
-
 		List<CategoryAssignmentRequest> requests = List.of(
 				new CategoryAssignmentRequest(CATEGORY_ID_1.toString(), commissionRate)
 		);
@@ -257,13 +151,8 @@ public class CategoryServiceIntegrationTest {
 		when(productServiceClient.getCategories(Mockito.anyList()))
 				.thenReturn(Flux.fromIterable(categoryResponses));
 
-		CategoryAssignment existingAssignment = CategoryAssignment.builder()
-				.vendorId(VENDOR_ID)
-				.category(Category.builder().id(CATEGORY_ID_1).name("Electronics").build())
-				.status(CategoryAssignment.CategoryAssignmentStatus.ACTIVE)
-				.commissionAmount(commissionRate.getNumber().numberValue(BigDecimal.class))
-				.commissionCurrency(commissionRate.getCurrency().getCurrencyCode())
-				.build();
+		Category category = TestUtils.createTestCategory(CATEGORY_ID_1, "Electronics");
+		CategoryAssignment existingAssignment = TestUtils.createTestCategoryAssignment(VENDOR_ID, category, commissionRate);
 
 		categoryAssignmentRepository.save(existingAssignment).block();
 
@@ -278,16 +167,19 @@ public class CategoryServiceIntegrationTest {
 
 	@Test
 	void getVendorCategories_ShouldReturnAllCategories() {
+		Category category1 = TestUtils.createTestCategory(CATEGORY_ID_1, "Electronics");
+		Category category2 = TestUtils.createTestCategory(CATEGORY_ID_2, "Home & Garden");
+
 		CategoryAssignment assignment1 = CategoryAssignment.builder()
 				.vendorId(VENDOR_ID)
-				.category(Category.builder().id(CATEGORY_ID_1).name("Electronics").build())
+				.category(category1)
 				.status(CategoryAssignment.CategoryAssignmentStatus.ACTIVE)
 				.commissionAmount(commissionRate.getNumber().numberValue(BigDecimal.class))
 				.commissionCurrency(commissionRate.getCurrency().getCurrencyCode()).build();
 
 		CategoryAssignment assignment2 = CategoryAssignment.builder()
 				.vendorId(VENDOR_ID)
-				.category(Category.builder().id(CATEGORY_ID_2).name("Home & Garden").build())
+				.category(category2)
 				.status(CategoryAssignment.CategoryAssignmentStatus.INACTIVE)
 				.commissionAmount(commissionRate.getNumber().numberValue(BigDecimal.class))
 				.commissionCurrency(commissionRate.getCurrency().getCurrencyCode())
@@ -306,16 +198,19 @@ public class CategoryServiceIntegrationTest {
 
 	@Test
 	void getVendorActiveCategories_ShouldReturnOnlyActiveCategories() {
+		Category category1 = TestUtils.createTestCategory(CATEGORY_ID_1, "Electronics");
+		Category category2 = TestUtils.createTestCategory(CATEGORY_ID_2, "Home & Garden");
+
 		CategoryAssignment assignment1 = CategoryAssignment.builder()
 				.vendorId(VENDOR_ID)
-				.category(Category.builder().id(CATEGORY_ID_1).name("Electronics").build())
+				.category(category1)
 				.status(CategoryAssignment.CategoryAssignmentStatus.ACTIVE)
 				.commissionAmount(commissionRate.getNumber().numberValue(BigDecimal.class))
 				.commissionCurrency(commissionRate.getCurrency().getCurrencyCode()).build();
 
 		CategoryAssignment assignment2 = CategoryAssignment.builder()
 				.vendorId(VENDOR_ID)
-				.category(Category.builder().id(CATEGORY_ID_2).name("Home & Garden").build())
+				.category(category2)
 				.status(CategoryAssignment.CategoryAssignmentStatus.INACTIVE)
 				.commissionAmount(commissionRate.getNumber().numberValue(BigDecimal.class))
 				.commissionCurrency(commissionRate.getCurrency().getCurrencyCode())
@@ -334,13 +229,8 @@ public class CategoryServiceIntegrationTest {
 
 	@Test
 	void updateCategoryStatus_ShouldUpdateStatusSuccessfully() {
-		CategoryAssignment assignment = CategoryAssignment.builder()
-				.vendorId(VENDOR_ID)
-				.category(Category.builder().id(CATEGORY_ID_1).name("Electronics").build())
-				.status(CategoryAssignment.CategoryAssignmentStatus.ACTIVE)
-				.commissionAmount(commissionRate.getNumber().numberValue(BigDecimal.class))
-				.commissionCurrency(commissionRate.getCurrency().getCurrencyCode())
-				.build();
+		Category category = TestUtils.createTestCategory(CATEGORY_ID_1, "Electronics");
+		CategoryAssignment assignment = TestUtils.createTestCategoryAssignment(VENDOR_ID, category, commissionRate);
 
 		categoryAssignmentRepository.save(assignment).block();
 
@@ -357,14 +247,8 @@ public class CategoryServiceIntegrationTest {
 
 	@Test
 	void updateCategoryStatus_WithInvalidStatus_ShouldFail() {
-		CategoryAssignment assignment = CategoryAssignment.builder()
-				.vendorId(VENDOR_ID)
-				.category(Category.builder().id(CATEGORY_ID_1).name("Electronics").build())
-				.status(CategoryAssignment.CategoryAssignmentStatus.ACTIVE)
-				.commissionAmount(commissionRate.getNumber().numberValue(BigDecimal.class))
-				.commissionCurrency(commissionRate.getCurrency().getCurrencyCode())
-				.build();
-
+		Category category = TestUtils.createTestCategory(CATEGORY_ID_1, "Electronics");
+		CategoryAssignment assignment = TestUtils.createTestCategoryAssignment(VENDOR_ID, category, commissionRate);
 		categoryAssignmentRepository.save(assignment).block();
 
 		StepVerifier.create(categoryService.updateCategoryStatus(
@@ -375,14 +259,8 @@ public class CategoryServiceIntegrationTest {
 
 	@Test
 	void removeCategory_ShouldRemoveSuccessfully() {
-		CategoryAssignment assignment = CategoryAssignment.builder()
-				.vendorId(VENDOR_ID)
-				.category(Category.builder().id(CATEGORY_ID_1).name("Electronics").build())
-				.status(CategoryAssignment.CategoryAssignmentStatus.ACTIVE)
-				.commissionAmount(commissionRate.getNumber().numberValue(BigDecimal.class))
-				.commissionCurrency(commissionRate.getCurrency().getCurrencyCode())
-				.build();
-
+		Category category = TestUtils.createTestCategory(CATEGORY_ID_1, "Electronics");
+		CategoryAssignment assignment = TestUtils.createTestCategoryAssignment(VENDOR_ID, category, commissionRate);
 		categoryAssignmentRepository.save(assignment).block();
 
 		StepVerifier.create(categoryService.removeCategory(VENDOR_ID, CATEGORY_ID_1)
@@ -395,74 +273,5 @@ public class CategoryServiceIntegrationTest {
 		StepVerifier.create(categoryService.removeCategory(VENDOR_ID, UUID.randomUUID()))
 				.expectError(CategoryAssignmentException.class)
 				.verify();
-	}
-
-	private static void setupKafkaConsumer() {
-		Properties props = new Properties();
-		props.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, KAFKA_CONTAINER.getBootstrapServers());
-		props.put(ConsumerConfig.GROUP_ID_CONFIG, "test-group-" + UUID.randomUUID());
-		props.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
-		props.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
-		props.put(ConsumerConfig.AUTO_OFFSET_RESET_CONFIG, "earliest");
-
-		props.put(ConsumerConfig.SESSION_TIMEOUT_MS_CONFIG, "10000");
-		props.put(ConsumerConfig.HEARTBEAT_INTERVAL_MS_CONFIG, "3000");
-
-		consumer = new KafkaConsumer<>(props);
-		consumer.subscribe(List.of("vendor.categories.assigned.event"));
-
-		try {
-			consumer.poll(Duration.ofMillis(100));
-		} catch (Exception e) {
-		}
-	}
-
-	private static void waitForKafkaReady() {
-		int retries = 20;
-		int waitTimeMs = 5000;
-
-		while (retries-- > 0) {
-			try {
-				if (KAFKA_CONTAINER.isRunning()) {
-					try (AdminClient adminClient = createAdminClient()) {
-						List<String> topics = List.of("vendor.categories.assigned.event");
-
-						List<NewTopic> newTopics = topics.stream()
-								.map(topic -> new NewTopic(topic, 1, (short) 1))
-								.collect(Collectors.toList());
-
-						try {
-							adminClient.createTopics(newTopics);
-							Thread.sleep(1000);
-
-							Set<String> existingTopics = adminClient.listTopics().names().get();
-							if (existingTopics.containsAll(topics)) {
-								return;
-							}
-						} catch (Exception e) {
-							if (e instanceof TopicExistsException) {
-								return;
-							}
-							System.out.println("Error creating topics: " + e.getMessage());
-						}
-					}
-				}
-			} catch (Exception e) {
-				System.out.println("Waiting for Kafka to be ready. Retries left: " + retries);
-			}
-
-			try {
-				Thread.sleep(waitTimeMs);
-			} catch (InterruptedException ignored) {
-			}
-		}
-
-		throw new IllegalStateException("Kafka is not ready after waiting.");
-	}
-
-	private static AdminClient createAdminClient() {
-		Properties props = new Properties();
-		props.put(AdminClientConfig.BOOTSTRAP_SERVERS_CONFIG, KAFKA_CONTAINER.getBootstrapServers());
-		return AdminClient.create(props);
 	}
 }
